tests/src/frontend/syntax/invalid/void_invalid_type.sk
fun shouldFail(x: Int): String {
  x match {
  | void -> "I should fail"
  | 42 -> "Nope"
  }
}
